--- a/site/estilo_historia.css
+++ b/site/estilo_historia.css
@@ -40,15 +40,17 @@ h1{
 .logo{
     text-align: center;
 }
-.img{
 
-    height: 13vh;
-}
 
 .livraria{
     text-align: right;
     padding-right: 25vh;
 }
+
+.texto p {
+    margin: 0;
+    padding: 0;
+  }
 
 .slogan{
     box-sizing: border-box;
@@ -74,7 +76,7 @@ ul{
 .box{
     flex-wrap: wrap;
     box-sizing: border-box;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
 .img-fluid {
